// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsHelp - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="p-8 md:p-12 bg-[#1D1D20] rounded-md flex-col justify-start items-start gap-12 inline-flex custom-help"
>
  <div
    class="w-full flex-col justify-start items-start gap-3 flex"
  >
    <div
      class="justify-start items-center gap-2 inline-flex"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-help"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <h2
        class="text-2xl font-bold leading-8 text-foreground"
      >
        FAQ
      </h2>
    </div>
    <p
      class="text-base font-medium leading-6 text-foreground"
    >
      Frequently asked questions from Pubky users
    </p>
    <div
      class="w-full flex-col gap-4 flex"
      data-orientation="vertical"
    >
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r1t»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r1s»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How can I update my profile information?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r1s»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r1t»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r1v»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r1u»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How can I delete my posts?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r1u»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r1v»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r21»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r20»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How can I mute someone?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r20»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r21»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r23»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r22»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How can I restore my account?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r22»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r23»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r25»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r24»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How is Pubky different from other social platforms?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r24»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r25»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="w-full h-px bg-white/10 my-6"
    />
    <div
      class="justify-start items-center gap-2 inline-flex"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
        />
        <path
          d="M14 2v4a2 2 0 0 0 2 2h4"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <h2
        class="text-2xl font-bold leading-8 text-foreground"
      >
        User Guide
      </h2>
    </div>
    <p
      class="text-base font-medium leading-6 text-foreground"
    >
      The Pubky User Guide will help you navigate through the app, utilize its key features, and get the most out of your Pubky experience.
    </p>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 gap-1 px-4 py-2 has-[>svg]:px-4"
      data-size="default"
      data-slot="button"
      data-variant="secondary"
      id="user-guide-btn"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
        />
        <path
          d="M14 2v4a2 2 0 0 0 2 2h4"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      User Guide
    </button>
    <div
      aria-hidden="true"
      class="w-full h-px bg-white/10 my-6"
    />
    <div
      class="justify-start items-center gap-2 inline-flex"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-message-circle"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
      <h2
        class="text-2xl font-bold leading-8 text-foreground"
      >
        Support
      </h2>
    </div>
    <p
      class="text-base font-medium leading-6 text-foreground"
    >
      Cannot find the answer you're looking for? Pubky support will help you out in no time.
    </p>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 gap-1 px-4 py-2 has-[>svg]:px-4"
      data-size="default"
      data-slot="button"
      data-variant="secondary"
      id="support-btn"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-message-circle"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
      Support (Telegram)
    </button>
  </div>
</div>
`;

exports[`SettingsHelp - Snapshots > matches snapshot with default props 1`] = `
<div
  class="p-8 md:p-12 bg-[#1D1D20] rounded-md flex-col justify-start items-start gap-12 inline-flex"
>
  <div
    class="w-full flex-col justify-start items-start gap-3 flex"
  >
    <div
      class="justify-start items-center gap-2 inline-flex"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-help"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <h2
        class="text-2xl font-bold leading-8 text-foreground"
      >
        FAQ
      </h2>
    </div>
    <p
      class="text-base font-medium leading-6 text-foreground"
    >
      Frequently asked questions from Pubky users
    </p>
    <div
      class="w-full flex-col gap-4 flex"
      data-orientation="vertical"
    >
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r1j»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r1i»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How can I update my profile information?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r1i»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r1j»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r1l»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r1k»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How can I delete my posts?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r1k»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r1l»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r1n»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r1m»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How can I mute someone?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r1m»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r1n»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r1p»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r1o»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How can I restore my account?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r1o»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r1p»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="w-full border border-border rounded-lg overflow-hidden"
        data-orientation="vertical"
        data-state="closed"
      >
        <h3
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-«r1r»"
            aria-expanded="false"
            class="w-full px-6 py-4 flex justify-between items-center hover:bg-white/5 transition-colors cursor-pointer group"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-state="closed"
            id="radix-«r1q»"
            type="button"
          >
            <span
              class="text-base font-semibold text-left"
            >
              How is Pubky different from other social platforms?
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down transition-transform flex-shrink-0 ml-4 group-data-[state=open]:rotate-180"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-«r1q»"
          class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-«r1r»"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="w-full h-px bg-white/10 my-6"
    />
    <div
      class="justify-start items-center gap-2 inline-flex"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
        />
        <path
          d="M14 2v4a2 2 0 0 0 2 2h4"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <h2
        class="text-2xl font-bold leading-8 text-foreground"
      >
        User Guide
      </h2>
    </div>
    <p
      class="text-base font-medium leading-6 text-foreground"
    >
      The Pubky User Guide will help you navigate through the app, utilize its key features, and get the most out of your Pubky experience.
    </p>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 gap-1 px-4 py-2 has-[>svg]:px-4"
      data-size="default"
      data-slot="button"
      data-variant="secondary"
      id="user-guide-btn"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
        />
        <path
          d="M14 2v4a2 2 0 0 0 2 2h4"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      User Guide
    </button>
    <div
      aria-hidden="true"
      class="w-full h-px bg-white/10 my-6"
    />
    <div
      class="justify-start items-center gap-2 inline-flex"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-message-circle"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
      <h2
        class="text-2xl font-bold leading-8 text-foreground"
      >
        Support
      </h2>
    </div>
    <p
      class="text-base font-medium leading-6 text-foreground"
    >
      Cannot find the answer you're looking for? Pubky support will help you out in no time.
    </p>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 gap-1 px-4 py-2 has-[>svg]:px-4"
      data-size="default"
      data-slot="button"
      data-variant="secondary"
      id="support-btn"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-message-circle"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
      Support (Telegram)
    </button>
  </div>
</div>
`;
